--- a/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
@@ -3,53 +3,39 @@
 
 \section{Wprowadzenie}
 
-W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wielopasmowych. Podejście przestawione w pracy bierze pod uwagę bezpieczeństwo, unikanie kolizji oraz zapewnia szybkie opuszczenie skrzyżowania przez pojazdy. Realizowane jest to, poprzez przedstawienie każdemu z pojazdów dokładnego planu opisującego jak ma się poruszać po drodze. Rozwiązanie jest szybsze od podejścia ze światłami drogowymi, ponieważ usunięte jest opóźnienie spowodowane światełm pomarańczowym na każdym ze szkrzyżowań. Użyty w pracy algorytm A* opiera się o stan opisuący położenie wszystkich samochodów na sieci skrzyżowań. Algorytm zapewnia unikanie kolizji w czasie rzeczywistym - w niektórych rozwiązaniach kolizje usuwane są przez kilkakrotne uruchamianie algorytmu.
+W pracy rozwiązywany jest problem planowania ruchu na skrzyżowaniach dróg wielopasmowych. Rozwiązanie w porównaniu do wcześniej opisanych podejść, wyróżnia się użyciem algorytmu A* do dokładnego zaplanowania ruchu dla każdego z pojazdów wraz z unikaniem kolizji. Większość przedstawionych rozwiązań opiera się o światła drogowe, co wiąże się z opóźnieniami spowodowanymi oczekiwaniem na świetle pomarańczowym, a także opóźnieniami spowodowanymi na oczekiwaniu na świetle czerwonym, kiedy na drodze poprzecznej nie ma żadnych pojazdów. Implementacja algorytmu A* jest generyczna i opiera się na stanach. Algorytm przyjmuje obiekt klasy implementującej metodę zwracającą stany sąsiednie dla stanu aktualnego. Do algorytmu przekazywane są także warunki końcowe. Algorytm przeszukuje stany korzystając z funkcji heurystyki, aż osiągnięte zostaną warunki końcowe - nie przeszukiwane są wszystkie możliwe stany. Algorytm kończy obliczenia, kiedy znajdzie stany spełniające określone warunki.
 
 \section{Planowanie ruchu przy użyciu modyfikacji A*}
 
-Można postawić tezę: zastosowanie metody planującej ruch drogowy przy algorytmu A* pozwala na zaplanowanie bezkolizyjnego ruchu drogowego dla pojazdów na sieci skrzyżowań. Metoda planuje ruch drogowy, dzięki któremu ruch na skrzyżowaniu przebiega sprawniej w porównaniu do rozwiązań ze światłami drogowymi wraz z ich optymalizacjami. Wadą metody jest złożoność obliczeniowa, która jest zależna od ilości samochodów na skrzyżowaniach. Czas trwania przeprowadzonych pomiarów dla 14 pojazdów znajdujących się na skrzyżowaniu ośmiu dróg nawet do kilku godzin, co jest znaczącym limitem dla rozwiązania.
+Można postawić tezę: zastosowanie metody planującej ruch drogowy przy użyciu algorytmu A* pozwala na zaplanowanie bezkolizyjnego ruchu drogowego dla pojazdów na skrzyżowaniu, co pozwala na osiągnięcie lepszej przepustowości niż w przypadku świateł sekwencyjnych wraz z optymalizacjami. Przepustowość rozumiemy jako ilość samochodów opuszczających skrzyżowanie w jednostce czasu. Rozwiązanie jest uruchamiane na jednym rdzeniu procesora. Korzystając z większej ilości rdzeniów, metoda może policzyć plany dla wielu wariantów. Plany wielowariantowe znajdują zastosowanie w przypadku pomyłki pojazdów, polegającej na niezastosowanie się do wyliczonego planu.
+\newline
+\indent
+Rozwiązanie przyjmuje położenie samochodów na sieci skrzyżowań oraz informacje na temat dróg jako dane wejściowe. Wynikiem jest dokładny plan poruszania się dla każdego z pojazdów. W planie znajdują się informacje o tym z jaką prędkością pojazd powinien się poruszyć, kiedy zwolnić lub przyspieszyć, aby omijać kolizje.
+\newline
+\indent
+W metodzie, do planowania wykorzystany został algorytm A*. Jest on oparty o działanie na stanach, gdzie pojedynczym stanem jest rozmieszczenie pojazdów na sieci skrzyżowań wraz z ich prędkościami. Stanem sąsiednim dla aktualnego stanu, jest zmiana pozycji pojazdów na sieci skrzyżowań wraz z ich prędkościami. Implementacja algorytmu A* jest generyczna - algorytm przyjmuje dowolny obiekt klasy impementujący metodę 'neighbours', która zwraca stany sąsiednie dla aktualnego stanu. Algorytm działa w sposób dynamiczny. W przypadku działania algorytmu A* na grafie, z góry znane są krawędzie oraz wierzchołki. W opracowanym rozwiązaniu algorytm dynamicznie tworzy sąsiednie stany.
+\newline
+\indent
+Do algorytmu przekazywana jest funkcja heurystyki, a także warunek końcowy. Dla koordynacji ruchu, warunkiem końcowym jest opuszczenie przez wszystkie pojazdy skrzyżowania. Funkcja heurystyki operuje na danych stanu - każdemu stanowi przypisuje wartość. W przedstawionym rozwiązaniu funkcja heurystyki zwraca najmniejsze wartości dla stanów, w których samochody maksymalnie przyspieszają.
 \newline
 \newline
-Rozwiązanie, mając podane położenie samochodów na sieci skrzyżowań liczy plan dla każdego z pojazdów. W planie znajdują się informacje jak szybko pojazd powinien jechać, kiedy powinien zwolnić lub przyspieszyć aby ominąć kolizję.
-\newline
-\newline
-Algorytm A* jest oparty o działanie na stanach. Pojedyńczym stanem jest rozmieszczenie pojazdów na sieci skrzyżowań wraz z ich prędkościami.
-\newline
-\newline
+\indent
 Do systemu wprowadza się także następujące dane:
 \begin{itemize}
 \item maksymalną prędkość jaką pojazd może osiągnąć
 \item wartośći przyspieszeń pojazdu
 \item parametr bezpieczeństwa, czyli odległość utrzymywana pomiędzy pojazdami
 \end{itemize}
-System posiadając stan początkowy i powyższe dane, tworzy wszystkie możliwe stany pochodne. Następnie korzystając z funkcji heurystyki wybiera najkrótszą ścieżkę stanów.
+System posiadając stan początkowy i powyższe dane, tworzy wszystkie możliwe stany pochodne. Następnie korzystając z funkcji heurystyki algorytm wybiera stany, które prowadzą do najszybszego opuszczenia przez samochody skrzyżowania.
 \newline
+\indent
+Rozwiązanie bierze pod uwagę unikanie kolizji pojazdów na skrzyżowaniu oraz pojazdów poruszających się tym samym pasem. Unikanie kolizji polega na usuwaniu stanów sąsiednich, które powodują kolizję - metoda 'neighbours' zwraca jedynie stany bezkolizyjne.
 \newline
-Opracowana została modyfikacja algorytmu A*. Algorytm został zaimplementowany w języku Ruby i jest on generyczny. Algorytm jako stan przyjmuje dowolny obiekt klasy implementujący metodę 'neighbours', która zwraca stany sąsiednie dla aktualnego stanu.
+\indent
+Do systemu można przekazać każdy rodzaj skrzyżowania jako listę dróg wraz z ich rozmiarami oraz informację o przecięciach z innymi drogami. Rozwiązanie oparte jest o przestrzeń dyskretną. Drogi mają konkretny rozmiar. Do systemu przekazuje się także listę samochodów, która zawiera informacje o położeniu samochodów na drogach oraz informację o ich prędkościach. System opiera się o działanie na krokach czasowych. Prędkość samochodów wyrażana jest w liczbie odcinków drogi na jeden krok czasowy.
 \newline
+\indent
+W celu wizualizcji stworzny został także moduł graficzny, który jest w stanie zwizualizować każde podane skrzyżowanie. Przedstawia on także w formie zdjęć, zaplanowany ruch samochodów. Każde zdjęcie odpowiada następnemu krokowi czasowemu. Na ostatnim zdjęciu skrzyżowanie jest opuszczone przez wszystkie samochody.
 \newline
-Algorytm działa w sposób dynamiczny. W przypadku działania algorytmu A* na grafie - z góry znane są krawędzie oraz wierzchołki. W tej modyfikacji algorytm A* działą na dynamicznie liczonych stanach.
-\newline
-\newline
-Do algorytmu należy także przekazać funkcję heurystyki, która jest zależna od danych danego stanu.
-\newline
-\newline
-Algorytm prowadzi obliczenia aż nie osiągnięte zostaną, wcześniej przekazane warunki wygranej.
-\newline
-\newline
-W opracowanym rozwiązaniu warunkiem wygranej jest opuszczenie przez wszystkie pojazdy skrzyżowań.
-\newline
-\newline
-W rozwiązaniu przedstawione zostało także unikanie kolizji pojazdów na skrzyżowaniu oraz pojazdów poruszających się tym samym pasem.
-\newline
-\newline
-Do systemu można przekazać każdy rodzaj skrzyżowania jako listę dróg wraz z ich danymi oraz informacjami o przecięciach z innnymi drogami.
-\newline
-\newline
-Rozwiązanie oparte jest o przestrzeń dyskretną. Drogi mają konkretny rozmiar. System opiera się o działanie na krokach czasowych. Prędkość samochodów wyrażana jest w liczbie odcinków drogi na jeden krok czasowy.
-\newline
-\newline
-W celu wizualizcji stworzny został także moduł graficzny, który jest wstanie zwizualizować każde podane skrzyżowanie. Przedstawia on także w formie zdjęć zaplanowany ruch samochodów. Każde zdjęcie odpowiada następnemu krokowi czasowemu. Na zdjęciu ostatnim wszystkie samochody opuszczają skrzyżowanie.
-\newline
-\newline
-W rozwiązaniu jest także liczone prawdopodobieństwo kolizji w przypadku, gdy jeden z pojazdów nie zastosuje się do rozwiązania. Kolizja jest wówczas wykrywana. W przypadku niezastosowania się pojazdu do planu, kolejny plan powinien być wyliczony.
+\indent
+Wadą metody jest złożoność obliczeniowa, która jest zależna od ilosci samochodów na skrzyżowaniach. Czas trwania programu zależy wykładniczo od ilości pojazdów na skrzyżowaniu. Dla 14 pojazdów znajdującyc się na skrzyżowaniu 8 dróg obliczenia trwają do kilku godzin, co jest znaczącym limitem dla rozwiązania.
