--- a/project_description/new_latex_documentation/msc-docs-template/main.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/main.tex
@@ -2,6 +2,7 @@
 
 \documentclass[12pt]{report}
 
+\usepackage{fancyhdr}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{amsmath} % for implementation of the matrix environment
