Improving implementation chapter

--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -18,16 +18,11 @@ Pomiary zostały wykonane na dwóch sieciach dróg:
 Drogi na obydwu sieciach mają rozmiar 24.
 \newline
 \newline
-Reprezentacja graficzna skrzyżowań jest przedstawiona na rysunkach \ref{eight-roads-crossroads} oraz \ref{four-roads-crossroads} z przykładowymi rozmieszczeniami pojazdów.
+Reprezentacja graficzna skrzyżowań jest przedstawiona na rysunku \ref{both-crossroads} z przykładowymi rozmieszczeniami pojazdów.
 \begin{figure}
-    \includegraphics[width=1.0\textwidth]{1.png}
-  \caption{Skrzyżowanie ośmiu dróg}
-  \label{eight-roads-crossroads}
-\end{figure}
-\begin{figure}
-    \includegraphics[width=1.0\textwidth]{4_roads.png}
-  \caption{Skrzyżowanie czterech dróg}
-  \label{four-roads-crossroads}
+    \includegraphics[width=1.0\textwidth]{2_crossroads.png}
+  \caption{Skrzyżowanie czterech oraz ośmiu dróg}
+  \label{both-crossroads}
 \end{figure}
 
 Pomiary zostały przeprowadzone dla następującej liczby samochodów \{2, 4, 6, 8, 10, 12\}.
