Small fix in outcomes chapter

--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -6,7 +6,7 @@ W celu zbadania działania systemu przeprowadzone zostały następujące pomiary
 
 \begin{itemize}
 \item pomiar czasu wykonania programu w zależności od liczby samochodów na skrzyżowaniu 
-\item pomiar ilości korków czasowych po których wszystkie samochody opuszczą skrzyżowania w zależnośći od liczby samochodów na skrzżowaniu
+\item pomiar ilości kroków czasowych po których wszystkie samochody opuszczą skrzyżowania w zależnośći od liczby samochodów na skrzżowaniu
 \end{itemize}
 
 Pomiary zostały wykonane na dwóch sieciach dróg:
@@ -19,7 +19,7 @@ Drogi na obydwu sieciach mają rozmiar 24.
 \newline
 \newline
 Reprezentacja graficzna skrzyżowań jest przedstawiona na rysunku \ref{both-crossroads} z przykładowymi rozmieszczeniami pojazdów.
-\begin{figure}
+\begin{figure}[H]
     \includegraphics[width=1.0\textwidth]{2_crossroads.png}
   \caption{Skrzyżowanie czterech oraz ośmiu dróg}
   \label{both-crossroads}
@@ -36,12 +36,12 @@ Zgodnie z wcześniej opisanymi założeniami dla skrzyżowania czterech dróg pr
 \newline
 \newline
 Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunkach \ref{four-roads-crossroads-execution-time} oraz \ref{four-roads-crossroads-timesteps}
-\begin{figure}[ht]
+\begin{figure}[H]
   \includegraphics[width=1.0\textwidth]{4_roads_crossroads_execution_time_2.png}
   \caption{Wykres zależności czasu wykonania programu od liczby pojazdów}
   \label{four-roads-crossroads-execution-time}
 \end{figure}
-\begin{figure}[ht]
+\begin{figure}[H]
   \includegraphics[width=1.0\textwidth]{4_roads_timesteps_2.png}
   \caption{Wykres zależności kroków czasowych od liczby pojazdów}
   \label{four-roads-crossroads-timesteps}
