--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -35,11 +35,16 @@ Dla każdej liczby samochodów wygenerowane losowo zostało 30 położeń pojazd
 Zgodnie z wcześniej opisanymi założeniami dla skrzyżowania czterech dróg program został uruchomiony 30 razy dla samochodów ze zbioru \{2, 4, 6, 8, 10, 12\} co razem daje 180 uruchomień.
 \newline
 \newline
-Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunkach \ref{four-roads-crossroads-execution-time} oraz \ref{four-roads-crossroads-timesteps}
+Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunkach \ref{execution_time_10_cars_4_roads}, \ref{execution_time_12_cars_4_roads} oraz \ref{four-roads-crossroads-timesteps}
 \begin{figure}[H]
-  \includegraphics[width=1.0\textwidth]{4_roads_crossroads_execution_time_2.png}
-  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów}
-  \label{four-roads-crossroads-execution-time}
+  \includegraphics[width=1.0\textwidth]{execution_time_10_cars_4_roads.png}
+  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów (dla 2-10 pojazdów)}
+  \label{execution_time_10_cars_4_roads}
+\end{figure}
+\begin{figure}[H]
+  \includegraphics[width=1.0\textwidth]{execution_time_12_cars_4_roads.png}
+  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów (dla 12 pojazdów)}
+  \label{execution_time_12_cars_4_roads}
 \end{figure}
 \begin{figure}[H]
   \includegraphics[width=1.0\textwidth]{4_roads_timesteps_2.png}
@@ -52,11 +57,16 @@ Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane s
 Dla skrzyżowania ośmiu dróg też zostało przeprowadzone 180 uruchomień.
 \newline
 \newline
-Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunkach \ref{four-roads-crossroads-execution-time} oraz \ref{four-roads-crossroads-timesteps}
+Wykresy przedstawiające wyniki na skrzyżowaniu czterech dróg zaprezentowane są na rysunkach \ref{execution_time_10_cars_8_roads}, \ref{execution_time_12_cars_8_roads} oraz \ref{eight-roads-crossroads-timesteps}
 \begin{figure}[H]
-    \includegraphics[width=1.0\textwidth]{8_roads_execution_time_2.png}
-  \caption{Wykres zależności czasu wykonania programu od liczby pojazdów}
-  \label{eight-roads-crossroads-execution-time}
+    \includegraphics[width=1.0\textwidth]{execution_time_10_cars_8_roads.png}
+  \caption{wykres zależności czasu wykonania programu od liczby pojazdów (dla 2-10 pojazdów)}
+  \label{execution_time_10_cars_8_roads}
+\end{figure}
+\begin{figure}[H]
+    \includegraphics[width=1.0\textwidth]{execution_time_12_cars_8_roads.png}
+  \caption{wykres zależności czasu wykonania programu od liczby pojazdów (dla 12 pojazdów)}
+  \label{execution_time_12_cars_8_roads}
 \end{figure}
 \begin{figure}[H]
     \includegraphics[width=1.0\textwidth]{8_roads_timesteps_2.png}
@@ -75,6 +85,6 @@ Wykonując pomiary uzgodnione zostały wspólne warunki w obu rozwiązanich tak,
 Wykres z wynikami pokazany jest na rysunku \ref{comparison}
 \begin{figure}[ht]
   \includegraphics[width=1.0\textwidth]{8_roads_comparison_2.png}
-  \caption{Porównanie rozwiązania ze zmodyfikowanym A* z zoptymalizowanymi światłami drogowymi na skrzyżowaniu ośmiu dróg}
+  \caption{Porównanie rozwiązania z użyciem A* ze światłami drogowymi na skrzyżowaniu ośmiu dróg}
   \label{comparison}
 \end{figure}
