Adding cpu info to outcomes chapter

--- a/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/5-outcomes.tex
@@ -29,6 +29,14 @@ Pomiary zostały przeprowadzone dla następującej liczby samochodów \{2, 4, 6,
 \newline
 \newline
 Dla każdej liczby samochodów wygenerowane losowo zostało 30 położeń pojazdów przy założeniu, że żaden z pojazdów nie startuje za ostatnim skrzyżowaniem.
+\newline
+\newline
+Pomiary zostały wykonane na następującym sprzęcie:
+\begin{itemize}
+\item Procesor: Intel(R) Core(TM) i7-4700MQ CPU @ 2.40GHz
+\item Liczba rdzeni procesora: 8 - Obliczenia zostały wykonane na jednym wątki, czyli na jednym rdzeniu
+\item 16 GB pamięci RAM
+\end{itemize}
 
 \section{Wyniki pomiarów dla skrzyżowania czterech dróg}
 
